--- a/.github/workflows/docker-cross-windows-arm-image.yml
+++ b/.github/workflows/docker-cross-windows-arm-image.yml
@@ -6,7 +6,11 @@ on:
       docker_images:
         description: '请填写docker镜像名称 多个用英文逗号分开'
         required: true
-        default: 'dockcross/windows-armv7:latest,dockcross/windows-arm64:latest'  # 设置默认的 Docker 镜像列表
+        default: 'dockcross/base:latest'  # 设置默认的 Docker 镜像列表
+      suffix:
+        description: '请填写压缩包名称'
+        required: true
+        default: 'image'
 
 jobs:
   pull_and_package:
@@ -22,18 +26,18 @@ jobs:
         IFS=',' read -r -a image_array <<< "$images"
         for image in "${image_array[@]}"; do
           docker pull "${image}"
-          docker save "${image}" -o "${image//\//_}-cross-windows-arm.tar"
+          docker save "${image}" -o "${image//\//_}-${suffix}.tar"
         done
     - name: Compress the TAR files
-      run: tar -czf cross-windows-arm-images.tar.gz *-cross-windows-arm.tar
+      run: tar -czf ${suffix}.tar.gz *-${suffix}.tar
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
-        name: docker-cross-windows-arm-images-tar
-        path: cross-windows-arm-images.tar.gz
+        name: docker-${suffix}-tar
+        path: ${suffix}-images.tar.gz
         retention-days: 30  # 将保留天数设置为 1 天 最多可设置90天
 
     - name: Clean up intermediate files
       run: |
-        rm *-cross-windows-arm.tar
+        rm *-${suffix}.tar
